# tqrc

./: .gitignore  CHANGELOG_v2.md  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  tqrc_acm.tex  tqrc_ieee.tex  tqrc_references.bib
.claude-flow/metrics/: performance.json  task-metrics.json
.github/workflows/: latex-build.yml  python-tests.yml
.swarm/: memory.db
archive/old_versions/: tqrc_main.tex
archive/root_backup_20260124/: tqrc_ieee.tex
archive/submissions/arxiv_submission_v2/: tqrc_ieee.tex
arxiv_submission 2/: main.tex
arxiv_submission/figures/: tikz_figures.tex
figures/: colorblind_safe_style.py  generate_all_figures.py
paper/v2/: tqrc_ieee_v2.tex
paper/v3/: tqrc_ieee_v3.tex
results/: experiment_results_20260102_044231.json  experiment_results_20260102_044313.json  experiment_results_20260102_044442.json  genuine_30trial_results.json  statistical_analysis.json
scripts/: generate_state_evolution_figure.py  run_experiments.py  statistical_analysis.py
src/: 01_numerical_verification.py
src/tqrc/: README.md  __init__.py  constants.py
src/tqrc/benchmarks/: README.md  __init__.py  esn.py  lorenz.py  mackey_glass.py  memory_capacity.py  narma.py  test_benchmarks.py
src/tqrc/core/: README.md  __init__.py  anyons.py  braiding.py  braiding_logger.py  braiding_n6_fixed.py  encoding.py  readout.py  reservoir.py  test_core.py
src/tqrc/utils/: METRICS_REFERENCE.md  __init__.py  diagnostic_example.py  diagnostics.py  metrics.py  visualization.py
